# rust-skia

./: .gitmodules
skia-bindings/: Cargo.toml  build.rs  build_support.rs
skia-bindings/build_support/: binaries.rs  skia.rs  utils.rs
skia-bindings/src/: bindings.cpp  bindings.rs  gl.cpp  gpu.cpp
skia-safe/: Cargo.toml
skia-safe/examples/gl-window/: main.rs
skia-safe/examples/icon/: renderer.rs
skia-safe/src/: animation.rs  core.rs  effects.rs  gpu.rs  interop.rs  lib.rs  modules.rs  pathops.rs  prelude.rs  private.rs  svg.rs
skia-safe/src/codec/: _codec.rs
skia-safe/src/core/: bitmap.rs  canvas.rs  color_filter.rs  contour_measure.rs  data.rs  data_table.rs  deferred_display_list_recorder.rs  draw_looper.rs  drawable.rs  font.rs  font_mgr.rs  image.rs  image_encoder.rs  image_filter.rs  image_generator.rs  image_info.rs  mask_filter.rs  paint.rs  path.rs  path_effect.rs  path_measure.rs  path_types.rs  picture.rs  picture_recorder.rs  pixel_ref.rs  pixmap.rs  point3.rs  rect.rs  region.rs  shader.rs  stroke_rec.rs  surface.rs  surface_characterization.rs  surface_props.rs  text_blob.rs  typeface.rs  vertices.rs  yuva_index.rs
skia-safe/src/effects/: _1d_path_effect.rs  _2d_path_effect.rs  alpha_threshold_filter.rs  arithmetic_image_filter.rs  blur_draw_looper.rs  blur_image_filter.rs  color_filter_image_filter.rs  color_matrix.rs  color_matrix_filter.rs  compose_image_filter.rs  corner_path_effect.rs  dash_path_effect.rs  discrete_path_effect.rs  displacement_map_effect.rs  drop_shadow_image_filter.rs  gradient_shader.rs  high_contrast_filter.rs  image_source.rs  layer_draw_looper.rs  lighting_image_filter.rs  luma_color_filter.rs  magnifier_image_filter.rs  matrix_convolution_image_filter.rs  merge_image_filter.rs  morphology_image_filter.rs  offset_image_filter.rs  op_path_effect.rs  overdraw_color_filter.rs  paint_image_filter.rs  perlin_noise_shader.rs  picture_image_filter.rs  runtime_effect.rs  shader_mask_filter.rs  table_color_filter.rs  table_mask_filter.rs  tile_image_filter.rs  trim_path_effect.rs  xfer_mode_image_filter.rs
skia-safe/src/gpu/: backend_drawable_info.rs  backend_surface.rs  context.rs  direct_context.rs  recording_context.rs
skia-safe/src/gpu/gl/: extensions.rs  interface.rs  types.rs
skia-safe/src/interop/: stream.rs  string.rs  strings.rs
skia-safe/src/modules/: paragraph.rs  shaper.rs
skia-safe/src/modules/paragraph/: font_collection.rs  paragraph.rs  paragraph_builder.rs  paragraph_cache.rs  paragraph_style.rs  text_style.rs  typeface_font_provider.rs
skia-safe/src/svg/: canvas.rs
skia-safe/src/utils/: camera.rs  custom_typeface.rs  interpolator.rs  parse_path.rs
skia-safe/tests/: codec.rs  send_sync.rs
(+3 files in other folders)
