[package]
name = "skia-safe"

description = "Safe Skia Bindings for Rust"
homepage = "https://github.com/rust-skia/rust-skia"
repository = "https://github.com/rust-skia/rust-skia"
documentation = "https://rust-skia.github.io/doc/skia_safe"
readme = "README.md"
# 5 max
keywords = ["skia", "rust-bindings", "vulkan", "opengl", "pdf"]
# 6 max
categories = ["api-bindings", "graphics", "multimedia::images", "rendering::graphics-api", "visualization"] 
license = "MIT"

version = "0.36.0"
authors = ["Armin Sander <armin@replicator.org>"]
edition = "2018"

[lib]
doctest = false

[features]
# Support for Lottie/Bodymovin files
lottie = ["skia-bindings/lottie"]
# PDF rendering backend
pdf = ["skia-bindings/pdf"]
# OpenGL rendering backend
gl = ["gpu", "skia-bindings/gl"]
# Vulkan rendering backend
vulkan = ["gpu", "skia-bindings/vulkan"]
# Metal rendering backend
metal = ["gpu", "skia-bindings/metal"]
# DirectX rendering backend
d3d = ["gpu", "winapi", "wio", "skia-bindings/d3d"]
# EGL backend for context management
egl = ["gl", "skia-bindings/egl"]
# Support for EGL on Wayland
wayland = ["egl", "skia-bindings/wayland"]
# GLX backend for context management
x11 = ["gl", "skia-bindings/x11"]
# Enable the text layout engine
textlayout = ["skia-bindings/textlayout"]
# Support for the WebP image format
webp = ["webp-encode", "webp-decode"]
# Allow writing to WebP files
webp-encode = ["skia-bindings/webp-encode"]
# Allow reading from WebP files
webp-decode = ["skia-bindings/webp-decode"]

# By default, the PDF backend is enabled. X11 is enabled here but it does nothing unless `gl`
# is also enabled. This is to preserve the previous behaviour where `gl` enabled GLX, while
# also allowing consumers to opt out of linking with libGL (for systems without X11).
default = ["pdf"]

# implied only, do not use
gpu = []
# deprecated since 0.25.0, forwarded to skia-bindings with the intent to show warnings while build.rs is running
svg = ["skia-bindings/svg"]
shaper = ["textlayout", "skia-bindings/shaper"]

# Used to enable nightly features
nightly = []

[dependencies]
bitflags = "1.2"
lazy_static = "1.4"
libc = "0.2.81"
debug_stub_derive = "0.3"
skia-bindings = { version = "=0.36.0", path = "../skia-bindings" }
# for d3d types
winapi = { version = "0.3.9", features = ["d3d12", "dxgi"], optional = true }
# for ComPtr
wio = { version = "0.2.2", optional = true }

[dev-dependencies]
serial_test = "0.5"
serial_test_derive = "0.5"
static_assertions = "1.1"

# gl-window
[target.'cfg(not(target_os = "android"))'.dev-dependencies]
glutin = "0.26"
gl-rs = { package = "gl", version = "0.14.0" }

